test/error/ast/CallExprWithoutReturn.mod
MODULE CallExprWithoutReturn;
PROCEDURE P; END P;
VAR i: INTEGER;
BEGIN
  i := P();
END CallExprWithoutReturn.
